# flower_bucketer

./: .gitignore  README.md  config.toml  manifest.csv  pyproject.toml  site.toml
docs/: index.html
docs/assets/: site.css
docs/flowers/: acanthus.html  achillea.html  aeonium.html  agapanthus.html  allium.html  aloe.html  alstroemeria.html  amphilophium.html  amsonia.html  anchusa.html  anemonastrum.html  anemone.html  anemonoides.html  anigozanthos.html  antirrhinum.html  aquilegia.html  argyranthemum.html  aristea.html  baptisia.html  bauhinia.html  begonia.html  bignonia.html  bougainvillea.html  buddleja.html  bulbine.html  calendula.html  callianthe.html  calystegia.html  campanula.html  carpobrotus.html  castilleja.html  ceanothus.html  chionanthus.html  cistanthe.html  cistus.html  clivia.html  coreopsis.html  cyclamen.html  delphinium.html  dendranthema.html  (+79 more)
src/flower_id/: __init__.py  bucketing.py  cli.py  config.py  manifest.py  plantnet.py
src/flower_site/: __init__.py  cli.py  config.py  generator.py
