[project]
name = "flower-id"
version = "0.1.0"
description = "Local flower photo bucketing using the Pl@ntNet API"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
]

[project.scripts]
flower-id = "flower_id.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
